WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131899
Arguments objects shouldn't need a destructor
https://bugs.webkit.org/show_bug.cgi?id=131899
Summary
Arguments objects shouldn't need a destructor
Mark Hahnenberg
Reported
2014-04-19 14:01:29 PDT
We can use CopiedSpace for their backing stores instead of malloc.
Attachments
Patch
(20.24 KB, patch)
2014-04-21 14:33 PDT
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2014-04-21 14:33:05 PDT
Created
attachment 229832
[details]
Patch
Mark Hahnenberg
Comment 2
2014-04-21 16:13:15 PDT
This neutral on the JS benchmarks we track.
Mark Hahnenberg
Comment 3
2014-04-21 17:00:37 PDT
This is a 1.5% speedup on dromaeo.
Mark Hahnenberg
Comment 4
2014-04-21 17:01:45 PDT
(In reply to
comment #3
)
> This is a 1.5% speedup on dromaeo.
(See
http://dromaeo.com/?id=220240,220241
)
WebKit Commit Bot
Comment 5
2014-04-21 18:38:02 PDT
Comment on
attachment 229832
[details]
Patch Clearing flags on attachment: 229832 Committed
r167641
: <
http://trac.webkit.org/changeset/167641
>
WebKit Commit Bot
Comment 6
2014-04-21 18:38:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug