Source/JavaScriptCore/runtime/Arguments.h
@@ -26,7 +26,6 @@
 
 #include "CodeOrigin.h"
 #include "JSActivation.h"
-#include "JSDestructibleObject.h"
 #include "JSFunction.h"
 #include "JSGlobalObject.h"
 #include "Interpreter.h"
@@ -36,11 +35,11 @@
 
 namespace JSC {
 
-class Arguments : public JSDestructibleObject {
+class Arguments : public JSNonFinalObject {
     friend class JIT;
     friend class JSArgumentsIterator;
 public:
-    typedef JSDestructibleObject Base;
+    typedef JSNonFinalObject Base;
 
     static Arguments* create(VM& vm, CallFrame* callFrame)
     {
@@ -68,6 +67,7 @@ public:
     DECLARE_INFO;
 
     static void visitChildren(JSCell*, SlotVisitor&);
+    static void copyBackingStore(JSCell*, CopyVisitor&, CopyToken);
 
     void fillArgList(ExecState*, MarkedArgumentBuffer&);
 
@@ -111,7 +111,6 @@ protected:
     void finishCreation(CallFrame*, InlineCallFrame*);
 
 private:
-    static void destroy(JSCell*);
     static bool getOwnPropertySlot(JSObject*, ExecState*, PropertyName, PropertySlot&);
     static bool getOwnPropertySlotByIndex(JSObject*, ExecState*, unsigned propertyName, PropertySlot&);
     static void getOwnPropertyNames(JSObject*, ExecState*, PropertyNameArray&, EnumerationMode);
@@ -123,13 +122,15 @@ private:
     void createStrictModeCallerIfNecessary(ExecState*);
     void createStrictModeCalleeIfNecessary(ExecState*);
 
+    size_t registerArraySizeInBytes() const { return sizeof(WriteBarrier<Unknown>) * m_numArguments; }
+    void allocateRegisterArray(VM&);
     bool isArgument(size_t);
     bool trySetArgument(VM&, size_t argument, JSValue);
     JSValue tryGetArgument(size_t argument);
     bool isDeletedArgument(size_t);
-    bool tryDeleteArgument(size_t);
+    bool tryDeleteArgument(VM&, size_t);
     WriteBarrierBase<Unknown>& argument(size_t);
-    void allocateSlowArguments();
+    void allocateSlowArguments(VM&);
 
     void init(CallFrame*);
 
@@ -146,19 +147,35 @@ private:
     bool m_isStrictMode;
 
     WriteBarrierBase<Unknown>* m_registers;
-    std::unique_ptr<WriteBarrier<Unknown>[]> m_registerArray;
+    CopyWriteBarrier<WriteBarrier<Unknown>> m_registerArray;
 
 public:
     struct SlowArgumentData {
-        WTF_MAKE_FAST_ALLOCATED;
     public:
+        SlowArgumentData()
+            : m_bytecodeToMachineCaptureOffset(0)
+        {
+        }
 
-        std::unique_ptr<SlowArgument[]> slowArguments;
-        int bytecodeToMachineCaptureOffset; // Add this if you have a bytecode offset into captured registers and you want the machine offset instead. Subtract if you want to do the opposite.
+        SlowArgument* slowArguments()
+        {
+            return reinterpret_cast<SlowArgument*>(WTF::roundUpToMultipleOf<8>(reinterpret_cast<size_t>(this + 1)));
+        }
+
+        int bytecodeToMachineCaptureOffset() const { return m_bytecodeToMachineCaptureOffset; }
+        void setBytecodeToMachineCaptureOffset(int newOffset) { m_bytecodeToMachineCaptureOffset = newOffset; }
+
+        static size_t sizeForNumArguments(unsigned numArguments)
+        {
+            return WTF::roundUpToMultipleOf<8>(sizeof(SlowArgumentData)) + sizeof(SlowArgument) * numArguments;
+        }
+
+    private:
+        int m_bytecodeToMachineCaptureOffset; // Add this if you have a bytecode offset into captured registers and you want the machine offset instead. Subtract if you want to do the opposite. 
     };
     
 private:
-    std::unique_ptr<SlowArgumentData> m_slowArgumentData;
+    CopyWriteBarrier<SlowArgumentData> m_slowArgumentData;
 
     WriteBarrier<JSFunction> m_callee;
 };
@@ -172,34 +189,37 @@ inline Arguments* asArguments(JSValue value)
 }
 
 inline Arguments::Arguments(CallFrame* callFrame)
-    : JSDestructibleObject(callFrame->vm(), callFrame->lexicalGlobalObject()->argumentsStructure())
+    : Base(callFrame->vm(), callFrame->lexicalGlobalObject()->argumentsStructure())
 {
 }
 
 inline Arguments::Arguments(CallFrame* callFrame, NoParametersType)
-    : JSDestructibleObject(callFrame->vm(), callFrame->lexicalGlobalObject()->argumentsStructure())
+    : Base(callFrame->vm(), callFrame->lexicalGlobalObject()->argumentsStructure())
 {
 }
 
-inline void Arguments::allocateSlowArguments()
+inline void Arguments::allocateSlowArguments(VM& vm)
 {
-    if (m_slowArgumentData)
+    if (!!m_slowArgumentData)
         return;
-    m_slowArgumentData = std::make_unique<SlowArgumentData>();
-    m_slowArgumentData->bytecodeToMachineCaptureOffset = 0;
-    m_slowArgumentData->slowArguments = std::make_unique<SlowArgument[]>(m_numArguments);
+
+    void* backingStore;
+    if (!vm.heap.tryAllocateStorage(this, SlowArgumentData::sizeForNumArguments(m_numArguments), &backingStore))
+        RELEASE_ASSERT_NOT_REACHED();
+    m_slowArgumentData.set(vm, this, static_cast<SlowArgumentData*>(backingStore));
+
     for (size_t i = 0; i < m_numArguments; ++i) {
-        ASSERT(m_slowArgumentData->slowArguments[i].status == SlowArgument::Normal);
-        m_slowArgumentData->slowArguments[i].index = CallFrame::argumentOffset(i);
+        ASSERT(m_slowArgumentData->slowArguments()[i].status == SlowArgument::Normal);
+        m_slowArgumentData->slowArguments()[i].index = CallFrame::argumentOffset(i);
     }
 }
 
-inline bool Arguments::tryDeleteArgument(size_t argument)
+inline bool Arguments::tryDeleteArgument(VM& vm, size_t argument)
 {
     if (!isArgument(argument))
         return false;
-    allocateSlowArguments();
-    m_slowArgumentData->slowArguments[argument].status = SlowArgument::Deleted;
+    allocateSlowArguments(vm);
+    m_slowArgumentData->slowArguments()[argument].status = SlowArgument::Deleted;
     return true;
 }
 
@@ -224,7 +244,7 @@ inline bool Arguments::isDeletedArgument(size_t argument)
         return false;
     if (!m_slowArgumentData)
         return false;
-    if (m_slowArgumentData->slowArguments[argument].status != SlowArgument::Deleted)
+    if (m_slowArgumentData->slowArguments()[argument].status != SlowArgument::Deleted)
         return false;
     return true;
 }
@@ -233,7 +253,7 @@ inline bool Arguments::isArgument(size_t argument)
 {
     if (argument >= m_numArguments)
         return false;
-    if (m_slowArgumentData && m_slowArgumentData->slowArguments[argument].status == SlowArgument::Deleted)
+    if (m_slowArgumentData && m_slowArgumentData->slowArguments()[argument].status == SlowArgument::Deleted)
         return false;
     return true;
 }
@@ -244,11 +264,11 @@ inline WriteBarrierBase<Unknown>& Arguments::argument(size_t argument)
     if (!m_slowArgumentData)
         return m_registers[CallFrame::argumentOffset(argument)];
 
-    int index = m_slowArgumentData->slowArguments[argument].index;
-    if (!m_activation || m_slowArgumentData->slowArguments[argument].status != SlowArgument::Captured)
+    int index = m_slowArgumentData->slowArguments()[argument].index;
+    if (!m_activation || m_slowArgumentData->slowArguments()[argument].status != SlowArgument::Captured)
         return m_registers[index];
 
-    return m_activation->registerAt(index - m_slowArgumentData->bytecodeToMachineCaptureOffset);
+    return m_activation->registerAt(index - m_slowArgumentData->bytecodeToMachineCaptureOffset());
 }
 
 inline void Arguments::finishCreation(CallFrame* callFrame)
@@ -269,12 +289,12 @@ inline void Arguments::finishCreation(CallFrame* callFrame)
     if (codeBlock->hasSlowArguments()) {
         SymbolTable* symbolTable = codeBlock->symbolTable();
         const SlowArgument* slowArguments = codeBlock->machineSlowArguments();
-        allocateSlowArguments();
+        allocateSlowArguments(callFrame->vm());
         size_t count = std::min<unsigned>(m_numArguments, symbolTable->parameterCount());
         for (size_t i = 0; i < count; ++i)
-            m_slowArgumentData->slowArguments[i] = slowArguments[i];
-        m_slowArgumentData->bytecodeToMachineCaptureOffset =
-            codeBlock->framePointerOffsetToGetActivationRegisters();
+            m_slowArgumentData->slowArguments()[i] = slowArguments[i];
+        m_slowArgumentData->setBytecodeToMachineCaptureOffset(
+            codeBlock->framePointerOffsetToGetActivationRegisters());
     }
 
     // The bytecode generator omits op_tear_off_activation in cases of no
